# browse-agent-v1

./: pyproject.toml  test_01.py  test_02.py
src/browse_agent_v1/: __init__.py  main.py
