[project]
name = "browse-agent-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Ibad", email = "ibad3572@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.1.40",
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.2",
    "openai-agents>=0.0.7",
    "steel-sdk>=0.3.0",
]

[project.scripts]
start = "browse_agent_v1:main.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browse_agent_v1"]
